Add environment configuration and deployment files
- Add .env.template for production configuration
- Update .gitignore to allow .env.template
- Add GCP deployment documentation
- Add Docker deployment scripts
- Update production settings for PostgreSQL and Redis

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,8 @@ staticfiles/
 .env.development.local
 .env.test.local
 .env.production.local
+# Template file (allowed)
+!.env.template
 
 # Virtual environments
 venv/
