--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -35,6 +35,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    command: python manage.py runserver 0.0.0.0:8000
     environment:
       - DEBUG=False
       - SECRET_KEY=${SECRET_KEY:-your-secret-key-change-in-production}
