--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -35,7 +35,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: python manage.py runserver 0.0.0.0:8000
+    command: gunicorn --bind 0.0.0.0:8000 --chdir /app motivation_news.wsgi:application --log-file -
     environment:
       - DEBUG=False
       - SECRET_KEY=${SECRET_KEY:-your-secret-key-change-in-production}
@@ -49,9 +49,9 @@ services:
       - ALLOWED_HOSTS=localhost,127.0.0.1,backend,${DOMAIN:-localhost}
       - CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://frontend:3000,https://${DOMAIN:-localhost}
     volumes:
-      - ./logs:/app/logs
-      - ./staticfiles:/app/staticfiles:ro
-      - ./media:/app/media
+      - logs_data:/app/logs
+      - staticfiles_data:/app/staticfiles
+      - media_data:/app/media
     depends_on:
       db:
         condition: service_healthy
@@ -79,9 +79,9 @@ services:
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./frontend/build:/usr/share/nginx/html:ro
-      - ./media:/usr/share/nginx/html/media:ro
-      - ./logs:/var/log/nginx
+      - frontend_build:/usr/share/nginx/html:ro
+      - media_data:/usr/share/nginx/html/media
+      - nginx_logs:/var/log/nginx
     depends_on:
       - backend
       - frontend
@@ -90,3 +90,8 @@ services:
 volumes:
   postgres_data:
   redis_data:
+  logs_data:
+  staticfiles_data:
+  media_data:
+  frontend_build:
+  nginx_logs:
