--- a/nginx.conf
+++ b/nginx.conf
@@ -1,65 +1,38 @@
 upstream backend {
-    server backend:8000;
+    server 127.0.0.1:8000;
 }
 
 upstream frontend {
-    server frontend:3000;
+    server 127.0.0.1:3000;
 }
 
 server {
     listen 80;
-    server_name localhost;
 
-    # Security headers
-    add_header X-Frame-Options DENY;
-    add_header X-Content-Type-Options nosniff;
-    add_header X-XSS-Protection "1; mode=block";
-
-    # Serve static files
-    location /static/ {
-        proxy_pass http://backend;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-    }
-
-    # Media files
-    location /media/ {
-        proxy_pass http://backend;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # API endpoints
     location /api/ {
-        proxy_pass http://backend;
+        proxy_pass http://backend/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Admin interface
     location /admin/ {
-        proxy_pass http://backend;
+        proxy_pass http://backend/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # React frontend - serve built files
     location / {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
+        proxy_pass http://frontend/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Health check endpoint
     location /health/ {
         access_log off;
         return 200 "healthy\n";
