🚀 Optimize GCP production deployment and fix nginx configuration
- Fix nginx to serve React build files instead of proxying to dev server
- Update frontend Dockerfile for production builds only
- Optimize deployment script with proper service startup order
- Add health checks, security headers, and caching to nginx
- Move frontend dependencies to devDependencies for smaller prod bundles
- Implement sequential service deployment with health monitoring
- Add comprehensive error handling and logging to deployment script

Fixes browser access issues post-GCP deployment by properly serving built React app through nginx.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -63,17 +63,14 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
-    ports:
-      - "3000:3000"
     environment:
-      - REACT_APP_API_URL=http://backend:8000/api
+      - REACT_APP_API_URL=/api
+      - CI=false
+    volumes:
+      - frontend_build:/app/build_output
+    restart: "no"
     depends_on:
       - backend
-    volumes:
-      - ./frontend/src:/app/src:ro
-      - ./frontend/public:/app/public:ro
-      - frontend_build:/app/build
-    restart: unless-stopped
 
   nginx:
     image: nginx:alpine
@@ -88,6 +85,12 @@ services:
       - backend
       - frontend
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost/health/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
 volumes:
   postgres_data:
