--- a/nginx.conf
+++ b/nginx.conf
@@ -1,22 +1,45 @@
 upstream backend {
-    server 127.0.0.1:8000;
-}
-
-upstream frontend {
-    server 127.0.0.1:3000;
+    server backend:8000;
 }
 
 server {
     listen 80;
+    server_name _;
 
+    # Serve static files from React build
+    location / {
+        root /usr/share/nginx/html;
+        index index.html index.htm;
+        try_files $uri $uri/ /index.html;
+
+        # Cache static assets
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+    }
+
+    # Proxy API requests to backend
     location /api/ {
         proxy_pass http://backend/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $server_name;
+
+        # CORS headers for API
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
+
+        # Handle preflight requests
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
     }
 
+    # Proxy admin requests to backend
     location /admin/ {
         proxy_pass http://backend/;
         proxy_set_header Host $host;
@@ -25,17 +48,30 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location / {
-        proxy_pass http://frontend/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    # Proxy static files from backend
+    location /static/ {
+        proxy_pass http://backend/;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
     }
 
+    # Proxy media files from backend
+    location /media/ {
+        proxy_pass http://backend/;
+        expires 30d;
+        add_header Cache-Control "public";
+    }
+
+    # Health check endpoint
     location /health/ {
         access_log off;
         return 200 "healthy\n";
         add_header Content-Type text/plain;
     }
+
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 }
