🐛 Fix frontend build and port conflict issues
- Fix frontend Dockerfile to properly build and copy React files
- Add explicit build command in docker-compose for frontend
- Add container cleanup to resolve port 80 conflicts
- Improve error handling for frontend build failures
- Add build verification to ensure files are created
- Add better logging for troubleshooting

Resolves:
- 'cp: can't stat build/*': No such file or directory
- 'failed to bind host port for 0.0.0.0:80': address already in use
- Improves deployment reliability and error diagnostics

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -79,6 +79,7 @@ services:
     restart: "no"
     depends_on:
       - backend
+    command: ["sh", "-c", "echo 'Building React app...' && npm run build && echo 'Copying build files...' && cp -r build/* /app/build_output/ && echo 'Frontend build complete!'"]
 
   nginx:
     image: nginx:alpine
