🐛 Add debugging to frontend build process
- Add mkdir -p /app/build_output to ensure directory exists
- Add ls -la output to verify files are copied correctly
- Improve error visibility in build process

This will help debug why static files are not being served by nginx.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -79,7 +79,7 @@ services:
     restart: "no"
     depends_on:
       - backend
-    command: ["sh", "-c", "echo 'Building React app...' && npm run build && echo 'Copying build files...' && cp -r build/* /app/build_output/ && echo 'Frontend build complete!'"]
+    command: ["sh", "-c", "echo 'Building React app...' && npm run build && echo 'Copying build files...' && mkdir -p /app/build_output && cp -r build/* /app/build_output/ && echo 'Files copied:' && ls -la /app/build_output/ && echo 'Frontend build complete!'"]
 
   nginx:
     image: nginx:alpine
