🐛 Fix nginx 'host not found' error by ensuring proper startup order
- Add DNS resolver for Docker networking (127.0.0.11)
- Ensure nginx waits for backend to be healthy before starting
- Add keepalive connections for better performance
- Fix dependency ordering to prevent startup race conditions

Resolves 'host not found in upstream backend:8000' error by ensuring backend is fully registered in Docker DNS before nginx config validation.

--- a/nginx.conf
+++ b/nginx.conf
@@ -18,9 +18,15 @@ http {
     types_hash_max_size 2048;
     client_max_body_size 100M;
 
-    upstream backend {
-        server backend:8000;
-    }
+    # DNS resolver for Docker networking
+    resolver 127.0.0.11 valid=30s;
+    resolver_timeout 5s;
+
+upstream backend {
+    server backend:8000;
+    # Keep connections alive for better performance
+    keepalive 32;
+}
 
     server {
         listen 80;
