--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -91,8 +91,10 @@ services:
       - frontend_build:/usr/share/nginx/html:ro
       - nginx_logs:/var/log/nginx
     depends_on:
-      - backend
-      - frontend
+      backend:
+        condition: service_healthy
+      frontend:
+        condition: service_completed_successfully
     restart: unless-stopped
 
 volumes:
