--- a/nginx.conf
+++ b/nginx.conf
@@ -74,11 +74,12 @@ upstream backend {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Proxy static files from backend
+        # Serve static files directly (NOT from backend)
         location /static/ {
-            proxy_pass http://backend/;
+            alias /usr/share/nginx/html/static/;
             expires 1y;
             add_header Cache-Control "public, immutable";
+            access_log off;
         }
 
         # Proxy media files from backend
