--- a/nginx.conf
+++ b/nginx.conf
@@ -47,12 +47,27 @@ upstream backend {
 
         # Proxy API requests to backend
         location /api/ {
-            proxy_pass http://backend/;
+            # Debug: Log API requests
+            access_log /var/log/nginx/api_access.log;
+
+            proxy_pass http://backend:8000/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $server_name;
+            proxy_set_header X-Forwarded-Port $server_port;
+
+            # Important for POST requests
+            proxy_set_header Content-Type $http_content_type;
+            proxy_set_header Content-Length $http_content_length;
+
+            # Cache and buffering
+            proxy_buffering off;
+            proxy_request_buffering off;
 
             # CORS headers for API
             add_header 'Access-Control-Allow-Origin' '*' always;
