--- a/nginx.conf
+++ b/nginx.conf
@@ -19,14 +19,8 @@ http {
     client_max_body_size 100M;
 
     # DNS resolver for Docker networking
-    resolver 127.0.0.11 valid=30s;
+    resolver 127.0.0.11 valid=30s ipv6=off;
     resolver_timeout 5s;
-
-upstream backend {
-    server backend:8000;
-    # Keep connections alive for better performance
-    keepalive 32;
-}
 
     server {
         listen 80;
@@ -50,6 +44,7 @@ upstream backend {
             # Debug: Log API requests
             access_log /var/log/nginx/api_access.log;
 
+            # Use resolver for dynamic DNS resolution
             proxy_pass http://backend:8000/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -82,7 +77,7 @@ upstream backend {
 
         # Proxy admin requests to backend
         location /admin/ {
-            proxy_pass http://backend/;
+            proxy_pass http://backend:8000/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
