--- a/nginx.conf
+++ b/nginx.conf
@@ -39,40 +39,17 @@ http {
             }
         }
 
-        # Proxy API requests to backend
+        # Proxy API requests to backend (simplified like working StockNest config)
         location /api/ {
             # Debug: Log API requests
             access_log /var/log/nginx/api_access.log;
 
-            # Use resolver for dynamic DNS resolution
-            proxy_pass http://backend:8000/;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
+            # Simplified proxy - no trailing slash, minimal headers
+            proxy_pass http://backend:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Host $server_name;
-            proxy_set_header X-Forwarded-Port $server_port;
-
-            # Important for POST requests
-            proxy_set_header Content-Type $http_content_type;
-            proxy_set_header Content-Length $http_content_length;
-
-            # Cache and buffering
-            proxy_buffering off;
-            proxy_request_buffering off;
-
-            # CORS headers for API
-            add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
-
-            # Handle preflight requests
-            if ($request_method = 'OPTIONS') {
-                return 204;
-            }
         }
 
         # Proxy admin requests to backend
