--- a/nginx.conf
+++ b/nginx.conf
@@ -54,7 +54,7 @@ http {
 
         # Proxy admin requests to backend
         location /admin/ {
-            proxy_pass http://backend:8000/;
+            proxy_pass http://backend:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -71,7 +71,7 @@ http {
 
         # Proxy media files from backend
         location /media/ {
-            proxy_pass http://backend/;
+            proxy_pass http://backend:8000;
             expires 30d;
             add_header Cache-Control "public";
         }
