--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -47,7 +47,7 @@ services:
       - DATABASE_HOST=db
       - DATABASE_PORT=5432
       - REDIS_URL=redis://redis:6379/0
-      - ALLOWED_HOSTS=localhost,127.0.0.1,backend,${DOMAIN:-localhost}
+      - ALLOWED_HOSTS=localhost,127.0.0.1,backend,136.115.200.36,${DOMAIN:-localhost}
       - CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://frontend:3000,https://${DOMAIN:-localhost}
     volumes:
       - logs_data:/app/logs
