--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,15 +49,13 @@ services:
       redis:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health/"]
+      test: ["CMD", "curl", "-f", "http://localhost:8000/api/core/health/"]
       interval: 30s
       timeout: 10s
       retries: 3
 
   frontend:
     build: ./frontend
-    ports:
-      - "3000:3000"
     environment:
       - REACT_APP_API_URL=http://localhost:8000/api
     depends_on:
@@ -65,7 +63,22 @@ services:
     volumes:
       - ./frontend/src:/app/src:ro
       - ./frontend/public:/app/public:ro
+      - frontend_build:/app/build_output
+    command: ["sh", "-c", "echo '🏗️ Building React app...' && npm run build && echo '📋 Build output:' && ls -la build/ && echo '📁 Copying to volume...' && mkdir -p /app/build_output && cp -r build/* /app/build_output/ && echo '✅ Files in volume:' && ls -la /app/build_output/ && echo '🎉 Frontend build complete!'"]
+
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - frontend_build:/usr/share/nginx/html:ro
+    depends_on:
+      - backend
+      - frontend
+    restart: unless-stopped
 
 volumes:
   postgres_data:
   redis_data:
+  frontend_build:
