--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -88,6 +88,8 @@ services:
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./ssl/fullchain.pem:/etc/nginx/fullchain.pem:ro
+      - ./ssl/privkey.pem:/etc/nginx/privkey.pem:ro
       - frontend_build:/usr/share/nginx/html:ro
       - nginx_logs:/var/log/nginx
     depends_on:
