--- a/nginx.conf
+++ b/nginx.conf
@@ -22,9 +22,27 @@ http {
     resolver 127.0.0.11 valid=30s ipv6=off;
     resolver_timeout 5s;
 
+    # SSL settings
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384;
+    ssl_prefer_server_ciphers off;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+
+    # Redirect HTTP to HTTPS
     server {
         listen 80;
-        server_name _;
+        server_name winmind.in www.winmind.in;
+        return 301 https://$server_name$request_uri;
+    }
+
+    # HTTPS server
+    server {
+        listen 443 ssl http2;
+        server_name winmind.in www.winmind.in;
+
+        ssl_certificate /etc/nginx/fullchain.pem;
+        ssl_certificate_key /etc/nginx/privkey.pem;
 
         # Serve static files from React build
         location / {
