Fix nginx HTTP/2 and 400 error issues
- Fix deprecated 'listen ... http2' directive to use separate 'http2 on'
- Add HTTP/2 optimization settings for better connection handling
- Implement rate limiting to prevent abuse (10r/s for API, 20r/s general)
- Add comprehensive error page handling
- Improve request processing stability

--- a/nginx.conf
+++ b/nginx.conf
@@ -18,6 +18,10 @@ http {
     types_hash_max_size 2048;
     client_max_body_size 100M;
 
+    # Request limiting to prevent abuse
+    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=general:10m rate=20r/s;
+
     # DNS resolver for Docker networking
     resolver 127.0.0.11 valid=30s ipv6=off;
     resolver_timeout 5s;
@@ -29,6 +33,12 @@ http {
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 10m;
 
+    # Improve HTTP/2 handling
+    http2_max_concurrent_streams 128;
+    http2_max_field_size 16k;
+    http2_max_header_size 32k;
+    http2_body_preread_size 64k;
+
     # Redirect HTTP to HTTPS
     server {
         listen 80;
@@ -38,7 +48,8 @@ http {
 
     # HTTPS server
     server {
-        listen 443 ssl http2;
+        listen 443 ssl;
+        http2 on;
         server_name winmind.in www.winmind.in;
 
         # SSL certificate configuration with error handling
@@ -56,8 +67,18 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
+        # Error pages
+        error_page 400 401 402 403 404 405 406 407 408 409 410 411 412 413 414 415 416 417 418 421 422 423 424 425 426 428 429 431 451 /error.html;
+        location = /error.html {
+            root /usr/share/nginx/html;
+            internal;
+        }
+
         # Serve static files from React build
         location / {
+            # Rate limiting for general requests
+            limit_req zone=general burst=50 nodelay;
+
             root /usr/share/nginx/html;
             index index.html index.htm;
             try_files $uri $uri/ /index.html;
@@ -71,6 +92,9 @@ http {
 
         # Proxy API requests to backend (simplified like working StockNest config)
         location /api/ {
+            # Rate limiting for API
+            limit_req zone=api burst=20 nodelay;
+
             # Debug: Log API requests
             access_log /var/log/nginx/api_access.log;
 
