Fix API 400 errors and trailing slash issues
- Change location from /api/ to /api to handle both trailing slash cases
- Add proper CORS headers directly in nginx to prevent 400 errors
- Handle OPTIONS preflight requests properly
- Fix obsolete HTTP/2 directives (http2_max_field_size -> large_client_header_buffers)
- Add debug headers and enhanced error logging for API requests
- Improve request processing reliability

--- a/nginx.conf
+++ b/nginx.conf
@@ -33,11 +33,12 @@ http {
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 10m;
 
-    # Improve HTTP/2 handling
+    # Improve HTTP/2 and header handling
     http2_max_concurrent_streams 128;
-    http2_max_field_size 16k;
-    http2_max_header_size 32k;
     http2_body_preread_size 64k;
+
+    # Replace obsolete directives with correct ones
+    large_client_header_buffers 4 16k;
 
     # Redirect HTTP to HTTPS
     server {
@@ -90,20 +91,36 @@ http {
             }
         }
 
-        # Proxy API requests to backend (simplified like working StockNest config)
-        location /api/ {
+        # Handle both /api and /api/ requests
+        location /api {
             # Rate limiting for API
             limit_req zone=api burst=20 nodelay;
 
-            # Debug: Log API requests
+            # Enhanced logging for debugging 400 errors
             access_log /var/log/nginx/api_access.log;
+            error_log /var/log/nginx/api_error.log;
 
-            # Simplified proxy - no trailing slash, minimal headers
+            # Proxy to backend with proper URL handling
             proxy_pass http://backend:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Debug headers to understand request processing
+            add_header X-API-Proxy "nginx-to-backend" always;
+            add_header X-Request-URI $request_uri always;
+
+            # CORS headers for API requests
+            add_header Access-Control-Allow-Origin "https://winmind.in" always;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+            add_header Access-Control-Allow-Headers "Authorization, Content-Type, X-Requested-With, Accept, Origin" always;
+            add_header Access-Control-Allow-Credentials "true" always;
+
+            # Handle preflight OPTIONS requests
+            if ($request_method = 'OPTIONS') {
+                return 204;
+            }
 
             # Timeout and error handling
             proxy_connect_timeout 60s;
