--- a/nginx.conf
+++ b/nginx.conf
@@ -18,9 +18,7 @@ http {
     types_hash_max_size 2048;
     client_max_body_size 100M;
 
-    # Request limiting to prevent abuse
-    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
-    limit_req_zone $binary_remote_addr zone=general:10m rate=20r/s;
+    # Request limiting removed for simplicity (can be added back if needed)
 
     # DNS resolver for Docker networking
     resolver 127.0.0.11 valid=30s ipv6=off;
@@ -77,9 +75,6 @@ http {
 
         # Serve static files from React build
         location / {
-            # Rate limiting for general requests
-            limit_req zone=general burst=50 nodelay;
-
             root /usr/share/nginx/html;
             index index.html index.htm;
             try_files $uri $uri/ /index.html;
@@ -100,63 +95,28 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Handle both /api and /api/ requests
-        location /api {
-            # Rate limiting for API
-            limit_req zone=api burst=20 nodelay;
-
-            # Enhanced logging for debugging 400 errors
-            access_log /var/log/nginx/api_access.log;
-            error_log /var/log/nginx/api_error.log;
-
-            # Proxy to backend with proper URL handling
+        # API endpoints - simplified like working StockNest config
+        location /api/ {
+            # Simple proxy like StockNest - no complex directives
             proxy_pass http://backend:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
 
-            # Debug headers to understand request processing
-            add_header X-API-Proxy "nginx-to-backend" always;
-            add_header X-Request-URI $request_uri always;
-
-            # CORS headers for API requests
-            add_header Access-Control-Allow-Origin "https://winmind.in" always;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-            add_header Access-Control-Allow-Headers "Authorization, Content-Type, X-Requested-With, Accept, Origin" always;
-            add_header Access-Control-Allow-Credentials "true" always;
-
-            # Handle preflight OPTIONS requests
-            if ($request_method = 'OPTIONS') {
-                return 204;
-            }
-
-            # Timeout and error handling
-            proxy_connect_timeout 60s;
-            proxy_send_timeout 60s;
-            proxy_read_timeout 60s;
-
-            # Retry failed requests
-            proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
-            proxy_next_upstream_tries 3;
+            # Basic timeout settings
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
         }
 
-        # Proxy admin requests to backend
+        # Admin panel
         location /admin/ {
             proxy_pass http://backend:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-
-            # Timeout and error handling
-            proxy_connect_timeout 60s;
-            proxy_send_timeout 60s;
-            proxy_read_timeout 60s;
-
-            # Retry failed requests
-            proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
-            proxy_next_upstream_tries 3;
         }
 
         # Serve static files directly (NOT from backend)
