Fix nginx location block ordering to restore frontend access
- Reorder location blocks: specific paths (/health, /api, /admin, /static, /media) before catch-all (/)
- Remove duplicate /health location block
- Ensure React app serves correctly from location / at the end
- Fix main site accessibility issue

--- a/nginx.conf
+++ b/nginx.conf
@@ -73,20 +73,7 @@ http {
             internal;
         }
 
-        # Serve static files from React build
-        location / {
-            root /usr/share/nginx/html;
-            index index.html index.htm;
-            try_files $uri $uri/ /index.html;
-
-            # Cache static assets
-            location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-                expires 1y;
-                add_header Cache-Control "public, immutable";
-            }
-        }
-
-        # Health check endpoint (outside /api/ to avoid auth)
+        # Health check endpoint (outside /api/ to avoid auth) - most specific first
         location /health/ {
             proxy_pass http://backend:8000;
             proxy_set_header Host $host;
@@ -134,11 +121,17 @@ http {
             add_header Cache-Control "public";
         }
 
-        # Health check endpoint
-        location /health/ {
-            access_log off;
-            return 200 "healthy\n";
-            add_header Content-Type text/plain;
+        # Serve React app - this must be LAST (catches all other requests)
+        location / {
+            root /usr/share/nginx/html;
+            index index.html index.htm;
+            try_files $uri $uri/ /index.html;
+
+            # Cache static assets
+            location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+                expires 1y;
+                add_header Cache-Control "public, immutable";
+            }
         }
 
         # Security headers
