--- a/nginx.conf
+++ b/nginx.conf
@@ -18,73 +18,33 @@ http {
     types_hash_max_size 2048;
     client_max_body_size 100M;
 
-    # Request limiting removed for simplicity (can be added back if needed)
-
     # DNS resolver for Docker networking
     resolver 127.0.0.11 valid=30s ipv6=off;
     resolver_timeout 5s;
 
-    # SSL settings
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384;
-    ssl_prefer_server_ciphers off;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 10m;
-
-    # Improve HTTP/2 and header handling
-    http2_max_concurrent_streams 128;
-    http2_body_preread_size 64k;
-
-    # Replace obsolete directives with correct ones
-    large_client_header_buffers 4 16k;
-
-    # Redirect HTTP to HTTPS
+    # Development server - HTTP only (no SSL for development)
     server {
         listen 80;
-        server_name winmind.in www.winmind.in;
-        return 301 https://$server_name$request_uri;
-    }
+        server_name localhost 127.0.0.1;
 
-    # HTTPS server
-    server {
-        listen 443 ssl;
-        http2 on;
-        server_name winmind.in www.winmind.in;
-
-        # SSL certificate configuration with error handling
-        ssl_certificate /etc/nginx/fullchain.pem;
-        ssl_certificate_key /etc/nginx/privkey.pem;
-
-        # SSL session caching for better performance
-        ssl_session_cache shared:SSL:10m;
-        ssl_session_timeout 10m;
-
-        # Security headers
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-
-        # Error pages
-        error_page 400 401 402 403 404 405 406 407 408 409 410 411 412 413 414 415 416 417 418 421 422 423 424 425 426 428 429 431 451 /error.html;
-        location = /error.html {
+        # Serve static frontend files
+        location / {
             root /usr/share/nginx/html;
-            internal;
+            index index.html index.htm;
+            try_files $uri $uri/ /index.html;
         }
 
-        # Health check endpoint (outside /api/ to avoid auth) - most specific first
+        # Health check endpoint
         location /health/ {
-            proxy_pass http://backend:8000;
+            proxy_pass http://backend:8000/api/core/health/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # API endpoints - simplified like working StockNest config
+        # API endpoints - proxy to Django backend
         location /api/ {
-            # Simple proxy like StockNest - no complex directives
             proxy_pass http://backend:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -106,32 +66,13 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Serve static files directly (NOT from backend)
-        location /static/ {
-            alias /usr/share/nginx/html/static/;
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-            access_log off;
-        }
-
         # Proxy media files from backend
         location /media/ {
             proxy_pass http://backend:8000;
-            expires 30d;
-            add_header Cache-Control "public";
-        }
-
-        # Serve React app - this must be LAST (catches all other requests)
-        location / {
-            root /usr/share/nginx/html;
-            index index.html index.htm;
-            try_files $uri $uri/ /index.html;
-
-            # Cache static assets
-            location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-                expires 1y;
-                add_header Cache-Control "public, immutable";
-            }
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         # Security headers
@@ -139,5 +80,8 @@ http {
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+
+        # Error and access log settings
+        error_page 404 /index.html;
     }
 }
