--- a/nginx.conf
+++ b/nginx.conf
@@ -32,6 +32,13 @@ http {
             root /usr/share/nginx/html;
             index index.html index.htm;
             try_files $uri $uri/ /index.html;
+            
+            # Cache control for HTML files
+            location ~* \.html$ {
+                add_header Cache-Control "no-cache, no-store, must-revalidate";
+                add_header Pragma "no-cache";
+                add_header Expires "0";
+            }
         }
 
         # Health check endpoint
