--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "@tiptap/extension-image": "^3.8.0",
     "@tiptap/extension-link": "^3.8.0",
     "@tiptap/extension-table": "^3.8.0",
