--- a/docker-compose.gcp.yml
+++ b/docker-compose.gcp.yml
@@ -39,7 +39,9 @@ services:
   nginx:
     image: nginx:alpine
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx.prod.conf:/etc/nginx/nginx.conf
+      - ./ssl/fullchain.pem:/etc/nginx/fullchain.pem:ro
+      - ./ssl/privkey.pem:/etc/nginx/privkey.pem:ro
     depends_on:
       - frontend
       - backend
