--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -89,7 +89,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx.prod.conf:/etc/nginx/nginx.conf:ro
       - ./ssl/fullchain.pem:/etc/nginx/fullchain.pem:ro
       - ./ssl/privkey.pem:/etc/nginx/privkey.pem:ro
       - frontend_build:/usr/share/nginx/html:ro
