--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -22,10 +22,21 @@ http {
     resolver 127.0.0.11 valid=30s ipv6=off;
     resolver_timeout 5s;
 
-    # Development server - HTTP only (no SSL for development)
+    # HTTPS server with SSL
     server {
-        listen 80;
-        server_name localhost 127.0.0.1;
+        listen 443 ssl http2;
+        server_name localhost 127.0.0.1 136.115.200.36 winmind.in www.winmind.in;
+
+        # SSL Configuration
+        ssl_certificate /etc/nginx/fullchain.pem;
+        ssl_certificate_key /etc/nginx/privkey.pem;
+        
+        # SSL Security Settings
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384;
+        ssl_prefer_server_ciphers off;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
 
         # Serve static frontend files
         location / {
@@ -92,4 +103,12 @@ http {
         error_page 404 /index.html;
     }
 
+    # HTTP server - redirect to HTTPS
+    server {
+        listen 80;
+        server_name localhost 127.0.0.1 136.115.200.36 winmind.in www.winmind.in;
+        
+        # Redirect all HTTP requests to HTTPS
+        return 301 https://$server_name$request_uri;
+    }
 }
