Fix Nginx configuration for better API handling and error recovery
- Add GCP IP to server_name in nginx.conf
- Enhance API proxy settings with retry logic and error handling
- Improve health check endpoint configuration
- Add proxy_next_upstream for better backend failover
- Apply fixes to both development and production Nginx configs

--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -59,6 +59,11 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Health check specific settings
+            proxy_connect_timeout 10s;
+            proxy_send_timeout 10s;
+            proxy_read_timeout 10s;
         }
 
         # API endpoints - proxy to Django backend
@@ -69,10 +74,18 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
 
-            # Basic timeout settings
+            # Enhanced timeout settings
             proxy_connect_timeout 30s;
             proxy_send_timeout 30s;
             proxy_read_timeout 30s;
+            
+            # Error handling
+            proxy_intercept_errors on;
+            error_page 502 503 504 /50x.html;
+            
+            # Retry settings
+            proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+            proxy_next_upstream_tries 2;
         }
 
         # Admin panel
