--- a/nginx.conf
+++ b/nginx.conf
@@ -25,7 +25,7 @@ http {
     # Development server - HTTP only (no SSL for development)
     server {
         listen 80;
-        server_name localhost 127.0.0.1;
+        server_name localhost 127.0.0.1 136.115.200.36;
 
         # Serve static frontend files
         location / {
@@ -48,6 +48,11 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Health check specific settings
+            proxy_connect_timeout 10s;
+            proxy_send_timeout 10s;
+            proxy_read_timeout 10s;
         }
 
         # API endpoints - proxy to Django backend
@@ -58,10 +63,18 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
 
-            # Basic timeout settings
+            # Enhanced timeout settings
             proxy_connect_timeout 30s;
             proxy_send_timeout 30s;
             proxy_read_timeout 30s;
+            
+            # Error handling
+            proxy_intercept_errors on;
+            error_page 502 503 504 /50x.html;
+            
+            # Retry settings
+            proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+            proxy_next_upstream_tries 2;
         }
 
         # Admin panel
