--- a/env.example
+++ b/env.example
@@ -3,8 +3,8 @@ SECRET_KEY=your-secret-key-here
 DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
 
-# Database
-DATABASE_URL=sqlite:///db.sqlite3
+# Database (SQLite for development, override for production)
+DATABASE_URL=db.sqlite3
 
 # Google OAuth2
 GOOGLE_CLIENT_ID=your-google-client-id
