--- a/docker-compose.gcp.yml
+++ b/docker-compose.gcp.yml
@@ -1,16 +1,6 @@
 version: '3.8'
 
 services:
-  db:
-    image: postgres:15-alpine
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    restart: unless-stopped
-
   redis:
     image: redis:7-alpine
     restart: unless-stopped
@@ -19,10 +9,9 @@ services:
     image: ${DOCKER_USERNAME}/motivation-backend:${IMAGE_TAG}
     environment:
       - DEBUG=False
-      - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
+      - DATABASE_URL=/app/db.sqlite3
       - REDIS_URL=redis://redis:6379/0
     depends_on:
-      - db
       - redis
     restart: unless-stopped
     ports:
@@ -51,4 +40,3 @@ services:
       - "443:443"
 
 volumes:
-  postgres_data:
