--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,6 @@ openai==1.3.7
 python-decouple==3.8
 Pillow>=10.0.0
 django-extensions==3.2.3
-psycopg2-binary==2.9.9
+dj-database-url==2.1.0
 whitenoise==6.6.0
 gunicorn==21.2.0
